--- a/week7/src/main/resources/application.properties
+++ b/week7/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.username=root
 spring.datasource.password=
 
 # Show JPA SQL in terminal
-spring.jpa.show-sql=true
+# spring.jpa.show-sql=true
 
 # Format the displayed SQL
 spring.jpa.properties.hibernate.format_sql=true
