--- a/assignment3/src/main/resources/application.properties
+++ b/assignment3/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.datasource.username=root
 spring.datasource.password=
 
 # Make JPA not bother with creating tables
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
