Finished demo project for Spring REST

--- a/week9/src/main/resources/application.properties
+++ b/week9/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-restaurant.name = Popeyes Louisana Kitchen
-page.size = 5
+spring.application.name=week9
 
 logging.level.org.springframework.jdbc=DEBUG
 
@@ -7,11 +6,5 @@ spring.datasource.generate-unique-name=false
 spring.datasource.name=dish
 spring.datasource.username=root
 spring.datasource.password=
-
-# Show JPA SQL in terminal
-# spring.jpa.show-sql=true
-
-# Format the displayed SQL
-spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.hibernate.ddl-auto=create-drop
